[gd_scene load_steps=16 format=2]

[ext_resource path="res://models/tree2.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/babybird.tscn" type="PackedScene" id=2]
[ext_resource path="res://models/bird.tscn" type="PackedScene" id=3]
[ext_resource path="res://models/rose.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ending.gd" type="Script" id=5]
[ext_resource path="res://BubblegumSans-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sounds/birdending.ogg" type="AudioStream" id=7]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.168627, 0.584314, 0.203922, 1 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 1000, 1000 )

[sub_resource type="ProceduralSky" id=3]
sky_horizon_color = Color( 0.831373, 0.407843, 0.603922, 1 )

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 3 )
fog_enabled = true

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=7]
resource_name = "fadein"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "screenfade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Spatial" type="Spatial"]
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="tree2" parent="." instance=ExtResource( 1 )]

[node name="tree3" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 2.73968 )

[node name="tree4" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -9.34239, 0, 7.38384 )

[node name="tree7" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 12.9908, 0, 2.3064 )

[node name="tree8" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 14.6566, 0, -3.83935 )

[node name="tree5" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -5.01768 )

[node name="tree6" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -9.66994, 0, -0.923378 )

[node name="StuffToFly" type="KinematicBody" parent="."]

[node name="babybird" parent="StuffToFly" instance=ExtResource( 2 )]
transform = Transform( 0.0324769, 0, -0.280479, 0, 0.277735, 0, 0.258642, 0, 0.035219, 7.09377, 1.05328, -0.397777 )

[node name="Camera" type="Camera" parent="StuffToFly"]
transform = Transform( -4.37004e-08, 0.0223733, 0.99975, 9.77966e-10, 0.99975, -0.0223733, -1, 0, -4.37114e-08, 13.1454, 1.95628, 0 )

[node name="bird" parent="StuffToFly" instance=ExtResource( 3 )]
transform = Transform( -1.47383e-08, 0, 0.370695, 0, 0.419758, 0, -0.337173, 0, -1.62036e-08, 4.29991, 3.49349, -2.36376 )

[node name="bird2" parent="StuffToFly" instance=ExtResource( 3 )]
transform = Transform( -1.47383e-08, 0, 0.370695, 0.0417919, 0.416521, 2.0084e-09, -0.334573, 0.0520281, -1.60786e-08, 4.29991, 3.49349, 1.77127 )

[node name="rose" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.982745, 0, 0.184963, 0, 1, 0, -0.184963, 0, 0.982745, 1.13273, 0, 3.76868 )

[node name="Timer" type="Timer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="DialogueBox" type="ColorRect" parent="."]
margin_right = 598.0
margin_bottom = 135.0
color = Color( 0.454902, 0.431373, 0.431373, 0.623529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DialogueBox"]
margin_left = 14.0
margin_top = 9.0
margin_right = 603.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 5 )
text = "Mom:
You can now fly up into the sky with us!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnPlayAgain" type="Button" parent="."]
visible = false
anchor_right = 0.01
anchor_bottom = 0.032
margin_left = 234.0
margin_top = 793.0
margin_right = 365.0
margin_bottom = 808.232
custom_fonts/font = SubResource( 6 )
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.672
autoplay = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.690754, 0.194375, -0.696475, 0.144086, 0.906877, 0.395997, 0.708589, -0.373889, 0.598422, -8.46402, 4.79465, -5.95371 )
light_color = Color( 0.819608, 0.47451, 0.137255, 1 )
shadow_enabled = true

[node name="ScreenFade" type="ColorRect" parent="."]
margin_left = -122.0
margin_right = 687.0
margin_bottom = 1139.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenFade"]
autoplay = "fadein"
anims/fadein = SubResource( 7 )
anims/screenfade = SubResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="btnPlayAgain" to="." method="_on_btnPlayAgain_pressed"]
[connection signal="animation_finished" from="ScreenFade/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
